cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_354.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/evp/digest.c:374: error: DEAD_STORE
  The value written to &i (type unsigned long) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/evp/digest.c:374:12: Write of unused value
372.   
373.       params[i++] = OSSL_PARAM_construct_size_t(OSSL_DIGEST_PARAM_XOFLEN, &size);
374.       params[i++] = OSSL_PARAM_construct_end();
                  ^
375.   
376.       if (EVP_MD_CTX_set_params(ctx, params) > 0)
